// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConcatTextPlugin default-name: errors 1`] = `Array []`;

exports[`ConcatTextPlugin default-name: path 1`] = `"__output__/default-name/default-name.txt"`;

exports[`ConcatTextPlugin default-name: source 1`] = `
"TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin default-name: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin default-name-magic-glob-ext: errors 1`] = `Array []`;

exports[`ConcatTextPlugin default-name-magic-glob-ext: path 1`] = `"__output__/default-name-magic-glob-ext/default-name-magic-glob-ext"`;

exports[`ConcatTextPlugin default-name-magic-glob-ext: source 1`] = `
"<h1>Hello World</h1>

<h2>Hello World</h2>
"
`;

exports[`ConcatTextPlugin default-name-magic-glob-ext: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin default-name-no-glob-ext: errors 1`] = `Array []`;

exports[`ConcatTextPlugin default-name-no-glob-ext: path 1`] = `"__output__/default-name-no-glob-ext/default-name-no-glob-ext"`;

exports[`ConcatTextPlugin default-name-no-glob-ext: source 1`] = `
"module.exports = {
	files: \`\${__dirname}/*\`,
	outputPath: __dirname.replace(\\"cases\\", \\"__output__\\")
};

TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin default-name-no-glob-ext: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin default-output-path: errors 1`] = `Array []`;

exports[`ConcatTextPlugin default-output-path: path 1`] = `"__output__/default-output-path/dist/multiple.txt"`;

exports[`ConcatTextPlugin default-output-path: source 1`] = `
"TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin default-output-path: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin empty: errors 1`] = `Array []`;

exports[`ConcatTextPlugin empty: path 1`] = `"__output__/empty/empty.properties"`;

exports[`ConcatTextPlugin empty: source 1`] = `
"
"
`;

exports[`ConcatTextPlugin empty: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-file-types: errors 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-file-types: path 1`] = `"__output__/multiple-file-types/multiple-file-types"`;

exports[`ConcatTextPlugin multiple-file-types: source 1`] = `
"TestProperty.Value=Hello World

Hallo Welt

# Hello World
"
`;

exports[`ConcatTextPlugin multiple-file-types: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-file-types-with-name: errors 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-file-types-with-name: path 1`] = `"__output__/multiple-file-types-with-name/values.data"`;

exports[`ConcatTextPlugin multiple-file-types-with-name: source 1`] = `
"TestProperty.Value=Hello World

Hallo Welt

# Hello World
"
`;

exports[`ConcatTextPlugin multiple-file-types-with-name: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-files: errors 1`] = `Array []`;

exports[`ConcatTextPlugin multiple-files: path 1`] = `"__output__/multiple-files/default-output-path.txt"`;

exports[`ConcatTextPlugin multiple-files: source 1`] = `
"TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt

TestProperty3.One.Value=Hallo Welt
TestProperty3.Two.Value=Foo
"
`;

exports[`ConcatTextPlugin multiple-files: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin nested-files: errors 1`] = `Array []`;

exports[`ConcatTextPlugin nested-files: path 1`] = `"__output__/nested-files/nested.txt"`;

exports[`ConcatTextPlugin nested-files: source 1`] = `
"TestProperty.Value=Hello World

TestProperty3.One.Value=Hallo Welt
TestProperty3.Two.Value=Foo

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin nested-files: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin no-trailing-line-end: errors 1`] = `Array []`;

exports[`ConcatTextPlugin no-trailing-line-end: path 1`] = `"__output__/no-trailing-line-end/no-trailing-line-end.properties"`;

exports[`ConcatTextPlugin no-trailing-line-end: source 1`] = `
"TestProperty.Value=Hello World
TestProperty2.Value=Hallo Welt"
`;

exports[`ConcatTextPlugin no-trailing-line-end: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin relative-files-path: errors 1`] = `Array []`;

exports[`ConcatTextPlugin relative-files-path: path 1`] = `"__output__/relative-files-path/relative-files-path.txt"`;

exports[`ConcatTextPlugin relative-files-path: source 1`] = `
"TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin relative-files-path: warnings 1`] = `Array []`;

exports[`ConcatTextPlugin relative-output-path: errors 1`] = `Array []`;

exports[`ConcatTextPlugin relative-output-path: path 1`] = `"__output__/relative-output-path/dist/res/multiple.txt"`;

exports[`ConcatTextPlugin relative-output-path: source 1`] = `
"TestProperty.Value=Hello World

TestProperty2.Value=Hallo Welt
"
`;

exports[`ConcatTextPlugin relative-output-path: warnings 1`] = `Array []`;
